# portfolio-website

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_READY.md  Dockerfile  HOW_AGENT_QUERIES_NOTION.md  NOTION_DATABASE_SCHEMA.md  NOTION_SETUP_GUIDE.md  PHASE_1_COMPLETE_FINAL.md  PHASE_1_REVIEW.md  Procfile  QUICK_TEST.md  README.md  SKILLS_TO_ADD.md  TEST_SUMMARY.md  VERCEL_ENV_VARIABLES.txt  create-favicon.js  notion_entries_ready.json  package.json  pyproject.toml  railway.json  railway.toml  requirements.md  requirements.txt  test_notion_insert.py
app/: page.tsx
backend/: .dockerignore  .env.example  Dockerfile  LIVEKIT_SETUP.md  TESTING_GUIDE.md  livekit.toml  main.py  pyproject.toml  requirements.txt  resume_entries.json
backend/portfolio_agent_adk/: agent.py
backend/portfolio_agent_livekit/: __init__.py  agent.py
backend/scripts/: add_resume_data.py  create_notion_db.py  create_portfolio_db_v2.py  insert_notion_pages.py  populate_notion_database.py  test_insert_conversation.py
backend/services/: conversation_service.py  notion_service.py
backend/utils/: pdf_parser.py
docs/: FRONTEND_STACK.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: cursor-glow.tsx  language-switcher.tsx  particle-background.tsx  theme-toggle.tsx  voice-call-interface.tsx  voice-chat.tsx
frontend/components/ui/: button.tsx  (+1 more)
frontend/lib/: i18n.ts  language-context.tsx  theme-context.tsx  utils.ts
gogole_adk/: Lesson_6.ipynb
google_adk_refrence/: Lesson_6.ipynb
(+4 files in other folders)
